# Murmur

./: .eslintignore  .eslintrc.json  .gitignore  .onedriveignore  .prettierrc  ELASTICSEARCH_MIGRATION_GUIDE.md  ENVIRONMENT_FIX.md  ENVIRONMENT_VARIABLES.md  ENV_SETUP_GUIDE.md  OAUTH_MIGRATION.md  README.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERCEL_DEPLOYMENT_READY.md  clean-route.js  components.json  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  headers.json  middleware.ts  next.config.ts  note.txt  package-lock.json  package.json  research-contacts-progress.xlsx  stripe-test.json  tailwind.config.js  tatus  test-actual-search.ts  test-elasticsearch.ts  test-full-search.ts  test-map-ux.js  testingGuidelines.md  tsconfig.json  vector-embeddings-progress.xlsx  vercel.json
  components/:     CustomTable.tsx
app/: layout.tsx
prisma/: schema.prisma  seed.ts
public/: musicVenuesDemoFullTRANSFER.csv  sampleContactListExcel.xlsx  sampleContactListTSV.tsv  sampleContactListTSV.txt  test-safari.html
rust-scorer/: Cargo.toml  README.md
rust-scorer/pkg/: README.md  rust_scorer.d.ts  rust_scorer.js  rust_scorer_bg.wasm  rust_scorer_bg.wasm.d.ts
rust-scorer/pkg-node/: README.md  package.json  rust_scorer.d.ts  rust_scorer.js  rust_scorer_bg.wasm  rust_scorer_bg.wasm.d.ts
rust-scorer/pkg-web/: README.md  package.json  rust_scorer.d.ts  rust_scorer.js  rust_scorer_bg.wasm  rust_scorer_bg.wasm.d.ts
rust-scorer/src/: geo.rs  lib.rs  search_preprocess.rs
scripts/: category-filter-parity.ts  check-contacts.ts  check-elasticsearch.tsx  check-indices.ts  (+39 more)
(+1462 files in other folders)
